# tren

./: .gitignore  Cargo.toml
src/: accounts.rs  aliases.rs  channel.rs  dispute_look_up.rs  logger.rs  main.rs  parser.rs  transaction.rs
test_data/: 01_simple.csv  02_simple_with_dispute.csv  03_simple_resolved_dispute.csv  04_simple_chargeback.csv  05_multiple_clients.csv  test.csv  test2.csv  test_case_01.ron
